--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -13,5 +13,7 @@ modules:
       - gnome-shell-extension-pop-shell
       - pop-gnome-shell-theme
       - wezterm
+      - file-roller
+      - distrobox
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
 
