--- a/recipes/recipe-silverblue.yml
+++ b/recipes/recipe-silverblue.yml
@@ -1,11 +1,12 @@
 name: celestial-silverblue
 description: A custom image of Fedora Silverblue with personal modifications.
 
-base-image: ghcr.io/secureblue/silverblue-nvidia-hardened
+base-image: ghcr.io/secureblue/silverblue-nvidia-userns-hardened
 image-version: 40
 
 modules:
   - from-file: common/common-packages.yml
   - from-file: common/common-files.yml
+  - from-file: common/common-chezmoi.yml
   - type: signing
 
