--- a/recipes/common/common-packages.yml
+++ b/recipes/common/common-packages.yml
@@ -2,10 +2,7 @@ type: rpm-ostree
 repos:
   - https://copr.fedorainfracloud.org/coprs/wezfurlong/wezterm-nightly/repo/fedora-%OS_VERSION%/wezfurlong-wezterm-nightly-fedora-%OS_VERSION%.repo
 install:
-  - gnome-shell-extension-dash-to-dock
-  - gnome-shell-extension-pop-shell
-  - pop-gnome-shell-theme
   - wezterm
-  - file-roller
+  - gamemode
 remove:
   - toolbox
