--- a/recipes/recipe-silverblue.yml
+++ b/recipes/recipe-silverblue.yml
@@ -5,6 +5,7 @@ base-image: ghcr.io/secureblue/silverblue-nvidia-userns-hardened
 image-version: 40
 
 modules:
+  - from-file: common/silverblue-packages.yml
   - from-file: common/common-packages.yml
   - from-file: common/common-files.yml
   - from-file: common/common-chezmoi.yml
