--- a/recipes/recipe-cosmic.yml
+++ b/recipes/recipe-cosmic.yml
@@ -6,6 +6,7 @@ image-version: 40
 
 modules:
   - from-file: cosmic/cosmic-packages.yml
+  - from-file: common/common-fonts.yml
   - from-file: common/common-packages.yml
   - from-file: common/common-files.yml
   - from-file: common/common-chezmoi.yml
