--- a/recipes/recipe-silverblue.yml
+++ b/recipes/recipe-silverblue.yml
@@ -8,6 +8,7 @@ modules:
   - from-file: silverblue/silverblue-packages.yml
   - from-file: common/common-fonts.yml
   - from-file: common/common-packages.yml
+  - from-file: common/common-packages-nvidia.yml
   - from-file: common/common-files.yml
   - from-file: common/common-chezmoi.yml
   - type: signing
