--- a/recipes/recipe-cosmic.yml
+++ b/recipes/recipe-cosmic.yml
@@ -2,7 +2,7 @@ name: celestial-cosmic
 description: A custom image of Fedora and COSMIC Desktop with personal modifications.
 
 base-image: ghcr.io/secureblue/cosmic-nvidia-userns-hardened
-image-version: br-staging-40
+image-version: 40
 
 modules:
   - from-file: cosmic/cosmic-packages.yml
