--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ on:
   workflow_dispatch: # allow manually triggering builds
 jobs:
   bluebuild:
-    runs-on: ubuntu-22.04
+    runs-on: self-hosted
     name: Build Custom Image
     permissions:
       contents: read
