--- a/recipes/common/common-packages.yml
+++ b/recipes/common/common-packages.yml
@@ -1,3 +1,7 @@
 type: rpm-ostree
+repos:
+  - https://copr.fedorainfracloud.org/coprs/atim/ubuntu-fonts/repo/fedora-%OS_VERSION%/atim-ubuntu-fonts-fedora-%OS_VERSION%.repo
+install:
+  - ubuntu-family-fonts
 remove:
   - toolbox
