--- a/recipes/recipe-silverblue.yml
+++ b/recipes/recipe-silverblue.yml
@@ -2,7 +2,7 @@ name: celestial-silverblue
 description: A custom image of Fedora Silverblue with personal modifications.
 
 base-image: ghcr.io/secureblue/silverblue-nvidia-open-userns-hardened
-image-version: br-next-41
+image-version: br-staging-40
 
 modules:
   - from-file: silverblue/silverblue-packages.yml
