--- a/recipes/recipe-cosmic.yml
+++ b/recipes/recipe-cosmic.yml
@@ -5,6 +5,7 @@ base-image: ghcr.io/secureblue/cosmic-nvidia-userns-hardened
 image-version: br-next-41
 
 modules:
+  - from-file: common/common-remove-files.yml
   - from-file: cosmic/cosmic-packages.yml
   - from-file: common/common-fonts.yml
   - from-file: common/common-packages.yml
