--- a/recipes/recipe-silverblue.yml
+++ b/recipes/recipe-silverblue.yml
@@ -2,9 +2,10 @@ name: celestial-silverblue
 description: A custom image of Fedora Silverblue with personal modifications.
 
 base-image: ghcr.io/secureblue/silverblue-nvidia-open-userns-hardened
-image-version: br-staging-40
+image-version: br-next-41
 
 modules:
+  - from-file: common/common-remove-files.yml
   - from-file: silverblue/silverblue-packages.yml
   - from-file: common/common-fonts.yml
   - from-file: common/common-packages.yml
