Added nvidia container toolkit

--- a/recipes/common/packages-nvidia.yml
+++ b/recipes/common/packages-nvidia.yml
@@ -1,3 +1,6 @@
 type: rpm-ostree
+repos:
+  - https://nvidia.github.io/libnvidia-container/stable/rpm/nvidia-container-toolkit.repo
 install:
   - libva-nvidia-driver
+  - nvidia-container-toolkit
