--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch: # allow manually triggering builds
 jobs:
   bluebuild:
-    runs-on: self-hosted
+    runs-on: ubuntu-24.04
     name: Build Custom Image
     permissions:
       contents: read
