--- a/recipes/common/packages.yml
+++ b/recipes/common/packages.yml
@@ -1,16 +1,6 @@
 type: rpm-ostree
-repos:
-  - https://copr.fedorainfracloud.org/coprs/atim/ubuntu-fonts/repo/fedora-%OS_VERSION%/atim-ubuntu-fonts-fedora-%OS_VERSION%.repo
-  - https://copr.fedorainfracloud.org/coprs/codifryed/CoolerControl/repo/fedora-%OS_VERSION%/codifryed-CoolerControl-fedora-%OS_VERSION%.repo
-  - https://openrazer.github.io/hardware:razer.repo
 install:
-  - ubuntu-family-fonts
-  - openssh-askpass
-  - file-roller
-  - fastfetch
-  - flatpak-builder
-  - coolercontrol
-  - openrazer-meta
+  - kernel-devel
 remove:
   - toolbox
   - sudo
