--- a/recipes/common/packages-extra.yml
+++ b/recipes/common/packages-extra.yml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://schema.blue-build.org/module-v1.json
 type: rpm-ostree
 repos:
   - https://copr.fedorainfracloud.org/coprs/atim/ubuntu-fonts/repo/fedora-%OS_VERSION%/atim-ubuntu-fonts-fedora-%OS_VERSION%.repo
