--- a/recipes/common/chezmoi.yml
+++ b/recipes/common/chezmoi.yml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://schema.blue-build.org/module-v1.json
 type: chezmoi
 repository: "https://github.com/Celestial-Linux/dotfiles"
 all-users: true
