--- a/recipes/common/fonts.yml
+++ b/recipes/common/fonts.yml
@@ -1,8 +1,8 @@
+# yaml-language-server: $schema=https://schema.blue-build.org/module-v1.json
 type: fonts
 fonts:
   nerd-fonts:
     - Agave
     - SourceCodePro
     - JetBrainsMono
-  google-fonts:
 
