--- a/recipes/recipe-cosmic.yml
+++ b/recipes/recipe-cosmic.yml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://schema.blue-build.org/recipe-v1.json
 name: celestial-cosmic
 description: A custom image of Fedora and COSMIC Desktop with personal modifications.
 
@@ -5,7 +6,6 @@ base-image: ghcr.io/secureblue/cosmic-nvidia-open-userns-hardened
 image-version: 41
 
 modules:
-  - from-file: common/remove-files.yml
   - from-file: cosmic/packages.yml
   - from-file: common/packages-extra.yml
   - from-file: common/fonts.yml
