--- a/recipes/recipe-silverblue.yml
+++ b/recipes/recipe-silverblue.yml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://schema.blue-build.org/recipe-v1.json
 name: celestial-silverblue
 description: A custom image of Fedora Silverblue with personal modifications.
 
@@ -5,7 +6,6 @@ base-image: ghcr.io/secureblue/silverblue-nvidia-open-userns-hardened
 image-version: 41
 
 modules:
-  - from-file: common/remove-files.yml
   - from-file: silverblue/packages.yml
   - from-file: common/packages-extra.yml
   - from-file: common/fonts.yml
