--- a/recipes/silverblue/packages.yml
+++ b/recipes/silverblue/packages.yml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://schema.blue-build.org/module-v1.json
 type: rpm-ostree
 install:
   - gnome-shell-extension-dash-to-dock
