--- a/recipes/common/packages-extra.yml
+++ b/recipes/common/packages-extra.yml
@@ -14,3 +14,4 @@ install:
   - openrazer-meta
   - waydroid
   - https://github.com/SpacingBat3/WebCord/releases/download/v4.10.2/webcord-4.10.2-1.x86_64.rpm
+  - python-pyclip
