--- a/recipes/common/openrazer-modules.yml
+++ b/recipes/common/openrazer-modules.yml
@@ -1,7 +1,7 @@
 modules:
     - type: containerfile
       snippets:
-      - COPY --from=ghcr.io/ublue-os/akmods:coreos-testing-41 /rpms /tmp/rpms
+      - COPY --from=ghcr.io/ublue-os/akmods:main-41 /rpms /tmp/rpms
       - RUN find /tmp/rpms
       - RUN rpm-ostree install /tmp/rpms/kmods/kmod-openrazer-*.rpm
     - type: script
