Added hyprland variant

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,7 @@ jobs:
         recipe:
           - recipe-silverblue.yml
           - recipe-cosmic.yml
+          - recipe-hyprland.yml
     steps:
        # the build is fully handled by the reusable github action
       - name: Build Custom Image
