--- a/recipes/hyprland/packages.yml
+++ b/recipes/hyprland/packages.yml
@@ -1,2 +1,7 @@
 # yaml-language-server: $schema=https://schema.blue-build.org/module-v1.json
 type: rpm-ostree
+repos:
+  - https://copr.fedorainfracloud.org/coprs/wezfurlong/wezterm-nightly/repo/fedora-%OS_VERSION%/wezfurlong-wezterm-nightly-fedora-%OS_VERSION%.repo
+install:
+  - wezterm
+  - alacritty
