--- a/recipes/hyprland/packages.yml
+++ b/recipes/hyprland/packages.yml
@@ -2,6 +2,13 @@
 type: rpm-ostree
 repos:
   - https://copr.fedorainfracloud.org/coprs/wezfurlong/wezterm-nightly/repo/fedora-%OS_VERSION%/wezfurlong-wezterm-nightly-fedora-%OS_VERSION%.repo
+  - https://copr.fedorainfracloud.org/coprs/solopasha/hyprland/repo/fedora-%OS_VERSION%/solopasha-hyprland-fedora-%OS_VERSION%.repo
 install:
-  - wezterm
-  - alacritty
+  - hyprland
+  - waybar
+  - xdg-desktop-portal-hyprland
+  - hyprpaper
+  - hyprlock
+  - hypridle
+  - hyprpicker
+  - hyprpolkitagent
