--- a/recipes/hyprland/packages.yml
+++ b/recipes/hyprland/packages.yml
@@ -2,13 +2,18 @@
 type: rpm-ostree
 repos:
   - https://copr.fedorainfracloud.org/coprs/wezfurlong/wezterm-nightly/repo/fedora-%OS_VERSION%/wezfurlong-wezterm-nightly-fedora-%OS_VERSION%.repo
-  - https://copr.fedorainfracloud.org/coprs/solopasha/hyprland/repo/fedora-%OS_VERSION%/solopasha-hyprland-fedora-%OS_VERSION%.repo
+
+replace:
+  - from-repo: https://copr.fedorainfracloud.org/coprs/solopasha/hyprland/repo/fedora-%OS_VERSION%/solopasha-hyprland-fedora-%OS_VERSION%.repo
+    packages:
+      - hyprland
+      - waybar
+      - xdg-desktop-portal-hyprland
+      - hyprpaper
+      - hyprlock
+      - hypridle
 install:
-  - hyprland
-  - waybar
-  - xdg-desktop-portal-hyprland
-  - hyprpaper
-  - hyprlock
-  - hypridle
+  - wezterm
+  - alacritty
   - hyprpicker
   - hyprpolkitagent
