--- a/recipes/hyprland/packages.yml
+++ b/recipes/hyprland/packages.yml
@@ -8,6 +8,7 @@ replace:
   - from-repo: https://copr.fedorainfracloud.org/coprs/solopasha/hyprland/repo/fedora-%OS_VERSION%/solopasha-hyprland-fedora-%OS_VERSION%.repo
     packages:
       - hyprland
+      - hyprutils
       - xdg-desktop-portal-hyprland
       - hyprpaper
       - hyprlock
