--- a/recipes/hyprland/packages.yml
+++ b/recipes/hyprland/packages.yml
@@ -10,6 +10,7 @@ install:
   - wezterm
   - alacritty
   - pop-launcher
+  - qalculate
   - hyprshot
   - hyprland-autoname-workspaces
   - xorg-x11-server-Xwayland
