Added gnome-keyring to Hyprland

--- a/recipes/hyprland/packages.yml
+++ b/recipes/hyprland/packages.yml
@@ -10,6 +10,7 @@ install:
   - wezterm
   - alacritty
   - pop-launcher
+  - gnome-keyring
   - qalculate
   - hyprshot
   - hyprland-autoname-workspaces
