--- a/recipes/hyprland/packages.yml
+++ b/recipes/hyprland/packages.yml
@@ -8,7 +8,6 @@ install:
   - hyprpicker
   - hyprpolkitagent
   - wezterm
-  - alacritty
   - pop-launcher
   - gnome-keyring
   - qalculate
@@ -16,3 +15,4 @@ install:
   - hyprland-autoname-workspaces
   - xorg-x11-server-Xwayland
   - wayland-protocols-devel
+  - nwg-look
