--- a/recipes/recipe-hyprland.yml
+++ b/recipes/recipe-hyprland.yml
@@ -8,6 +8,7 @@ image-version: 41
 modules:
   - from-file: hyprland/packages-replace.yml
   - from-file: hyprland/packages.yml
+  - from-file: hyprland/files.yml
   - from-file: common/packages-extra.yml
   - from-file: common/fonts.yml
   - from-file: common/packages.yml
