chore: make builds faster

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,9 +19,9 @@ jobs:
       fail-fast: false # stop GH from cancelling all matrix builds if one fails
       matrix:
         recipe:
-          - recipe-silverblue.yml
-          - recipe-kinoite.yml
-          - recipe-cosmic.yml
+          # - recipe-silverblue.yml
+          # - recipe-kinoite.yml
+          # - recipe-cosmic.yml
           - recipe-hyprland.yml
     steps:
        # the build is fully handled by the reusable github action
@@ -32,6 +32,3 @@ jobs:
           cosign_private_key: ${{ secrets.SIGNING_SECRET }}
           registry_token: ${{ github.token }}
           pr_event_number: ${{ github.event.number }}
-
-          # enabled by default, disable if your image is small and you want faster builds      
-          maximize_build_space: true
