--- a/recipes/recipe-hyprland.yml
+++ b/recipes/recipe-hyprland.yml
@@ -8,11 +8,11 @@ image-version: 41
 modules:
   - from-file: hyprland/packages-replace.yml
   - from-file: hyprland/packages.yml
-  - from-file: hyprland/files.yml
   - from-file: common/packages-extra.yml
   - from-file: common/fonts.yml
   - from-file: common/packages.yml
   - from-file: common/packages-nvidia.yml
+  - from-file: common/files.yml
   - from-file: common/chezmoi.yml
   - from-file: common/openrazer-modules.yml
   - from-file: common/final-modules.yml
