--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,9 +19,9 @@ jobs:
       fail-fast: false # stop GH from cancelling all matrix builds if one fails
       matrix:
         recipe:
-          # - recipe-silverblue.yml
-          # - recipe-kinoite.yml
-          # - recipe-cosmic.yml
+          - recipe-silverblue.yml
+          - recipe-kinoite.yml
+          - recipe-cosmic.yml
           - recipe-hyprland.yml
     steps:
        # the build is fully handled by the reusable github action
