chore: update to fedora 42

--- a/recipes/hyprland/packages.yml
+++ b/recipes/hyprland/packages.yml
@@ -9,7 +9,9 @@ install:
   - hyprpolkitagent
   - wezterm
   - pop-launcher
-  - kwallet
+  - git-credential-libsecret
+  - libsecret
+  - gnome-keyring
   - qalculate
   - hyprshot
   - xorg-x11-server-Xwayland
