chore: fix build

--- a/recipes/hyprland/packages.yml
+++ b/recipes/hyprland/packages.yml
@@ -19,10 +19,10 @@ install:
   - nwg-look
   - uwsm
   - nautilus
-  - cmake
-  - meson
-  - gcc-c++
-  - mesa-libGLES-devel
+  # - cmake
+  # - meson
+  # - gcc-c++
+  # - mesa-libGLES-devel
   - hyprland-devel
   - hyprland-uwsm
   - chromium
