chore: package selection and use stable image version
AI: Update package selection and use stable image version

Replace chromium with aylurs-gtk-shell2 in Hyprland config and
update all base image versions from br-staging-42 to 42

--- a/recipes/hyprland/packages.yml
+++ b/recipes/hyprland/packages.yml
@@ -19,10 +19,10 @@ install:
   - nwg-look
   - uwsm
   - nautilus
+  - aylurs-gtk-shell2
   # - cmake
   # - meson
   # - gcc-c++
   # - mesa-libGLES-devel
   # - hyprland-devel
   - hyprland-uwsm
-  - chromium
