--- a/recipes/recipe-hyprland.yml
+++ b/recipes/recipe-hyprland.yml
@@ -3,7 +3,7 @@ name: celestial-hyprland
 description: A custom image of Fedora and Hyprland with personal modifications.
 
 base-image: ghcr.io/secureblue/wayblue-hyprland-nvidia-open-hardened
-image-version: br-staging-42
+image-version: 42
 
 modules:
   - from-file: hyprland/packages-replace.yml
