--- a/recipes/hyprland/packages.yml
+++ b/recipes/hyprland/packages.yml
@@ -6,6 +6,7 @@ repos:
   - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
 
 install:
+  - hyprland-qt-support
   - hyprpicker
   - hyprpolkitagent
   - wezterm
@@ -23,11 +24,14 @@ install:
   - aylurs-gtk-shell2
   - nu
   - starship
-  # - cmake
-  # - meson
-  # - gcc-c++
-  # - mesa-libGLES-devel
+
+  # Dependencies for Hyprland plugin manager:
+  - cmake
+  - meson
+  - gcc-c++
   # - hyprland-devel
+
+  # Dependencies for Aylurs GTK Shell:
   - libgtop2
   - grimblast
   - btop
