chore: add hyprland-devel

--- a/recipes/hyprland/packages.yml
+++ b/recipes/hyprland/packages.yml
@@ -10,6 +10,7 @@ install:
   # Hyprland
   - hyprutils
   - hyprland
+  - hyprland-devel
   - xdg-desktop-portal-hyprland
   - hyprpaper
   - hyprlock
