--- a/recipes/common/packages-extra.yml
+++ b/recipes/common/packages-extra.yml
@@ -4,6 +4,7 @@ repos:
   - https://copr.fedorainfracloud.org/coprs/atim/ubuntu-fonts/repo/fedora-%OS_VERSION%/atim-ubuntu-fonts-fedora-%OS_VERSION%.repo
   - https://copr.fedorainfracloud.org/coprs/codifryed/CoolerControl/repo/fedora-%OS_VERSION%/codifryed-CoolerControl-fedora-%OS_VERSION%.repo
   - https://copr.fedorainfracloud.org/coprs/ublue-os/akmods/repo/fedora-%OS_VERSION%/ublue-os-akmods-fedora-%OS_VERSION%.repo
+  - https://repository.mullvad.net/rpm/stable/mullvad.repo
 install:
   - ubuntu-family-fonts
   - openssh-askpass
@@ -13,3 +14,4 @@ install:
   - coolercontrol
   - https://github.com/SpacingBat3/WebCord/releases/download/v4.10.4/webcord-4.10.4-1.x86_64.rpm
   - gamemode
+  - mullvad-vpn
