--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch: # allow manually triggering builds
 jobs:
   bluebuild:
-    runs-on: ubuntu-24.04
+    runs-on: self-hosted
     name: Build Custom Image
     permissions:
       contents: read
@@ -21,8 +21,8 @@ jobs:
       matrix:
         recipe:
           - recipe-silverblue.yml
-          - recipe-kinoite.yml
-          - recipe-cosmic.yml
+          # - recipe-kinoite.yml
+          # - recipe-cosmic.yml
           - recipe-hyprland.yml
     steps:
       # the build is fully handled by the reusable github action
