--- a/recipes/common/packages-cachyos-kernel.yml
+++ b/recipes/common/packages-cachyos-kernel.yml
@@ -6,6 +6,7 @@ install:
   - kernel-cachyos-lto
   - kernel-cachyos-lto-devel-matched
   - kernel-cachyos-lto-nvidia-open
+  - akmod-nvidia
 remove:
   - kernel
   - kernel-core
