🔧 (packages-cachyos-kernel.yml): replace akmod-nvidia with akmods in install list
Switch to installing the generic akmods package instead of akmod-nvidia
to improve compatibility with a wider range of kernel modules, not just
NVIDIA drivers. This change allows for more flexible and maintainable
kernel module management.

--- a/recipes/common/packages-cachyos-kernel.yml
+++ b/recipes/common/packages-cachyos-kernel.yml
@@ -6,7 +6,7 @@ install:
   - kernel-cachyos-lto
   - kernel-cachyos-lto-devel-matched
   - kernel-cachyos-lto-nvidia-open
-  - akmod-nvidia
+  - akmods
 remove:
   - kernel
   - kernel-core
