--- a/recipes/recipe-hyprland.yml
+++ b/recipes/recipe-hyprland.yml
@@ -16,4 +16,5 @@ modules:
   - from-file: common/packages-nvidia.yml
   - from-file: common/files.yml
   - from-file: common/chezmoi.yml
+  - from-file: common/final-modules-cachy.yml
   - type: signing
