⬆️ (kernel): switch to non-LTO CachyOS kernel and update repo URL 🔧 (recipe-hyprland): change base image to sericea-nvidia-open-hardened
Switch to the standard CachyOS kernel (non-LTO) and update the repository
URL to match the new package source, simplifying kernel management and
improving compatibility. Update the Hyprland recipe to use the
sericea-nvidia-open-hardened base image, enabling better support for
NVIDIA open drivers and aligning with the new kernel stack.

--- a/recipes/common/packages-cachyos-kernel.yml
+++ b/recipes/common/packages-cachyos-kernel.yml
@@ -1,12 +1,10 @@
 # yaml-language-server: $schema=https://schema.blue-build.org/module-v1.json
 type: rpm-ostree
 repos:
-  - https://copr.fedorainfracloud.org/coprs/bieszczaders/kernel-cachyos-lto/repo/fedora-%OS_VERSION%/bieszczaders-kernel-cachyos-fedora-lto-%OS_VERSION%.repo
+  - https://copr.fedorainfracloud.org/coprs/bieszczaders/kernel-cachyos/repo/fedora-%OS_VERSION%/bieszczaders-kernel-cachyos-fedora-%OS_VERSION%.repo
 install:
-  - kernel-cachyos-lto
-  - kernel-cachyos-lto-devel-matched
-  - kernel-cachyos-lto-nvidia-open
-  - akmods
+  - kernel-cachyos
+  - kernel-cachyos-devel-matched
 remove:
   - kernel
   - kernel-core
