Revert "🔧 (packages-cachyos-kernel.yml): replace akmod-nvidia with akmods in install list"
This reverts commit 86e8c1aac2c1ca264478e39d7949acdb1a0c79be.

--- a/recipes/common/packages-cachyos-kernel.yml
+++ b/recipes/common/packages-cachyos-kernel.yml
@@ -6,7 +6,7 @@ install:
   - kernel-cachyos-lto
   - kernel-cachyos-lto-devel-matched
   - kernel-cachyos-lto-nvidia-open
-  - akmods
+  - akmod-nvidia
 remove:
   - kernel
   - kernel-core
