Revert "🔧 (recipe-hyprland.yml): remove final-modules.yml from included modules"
This reverts commit 78571bfa8ec12551d964e93616d6105c3d9445ed.

--- a/recipes/recipe-hyprland.yml
+++ b/recipes/recipe-hyprland.yml
@@ -16,4 +16,5 @@ modules:
   - from-file: common/packages-nvidia.yml
   - from-file: common/files.yml
   - from-file: common/chezmoi.yml
+  - from-file: common/final-modules.yml
   - type: signing
