Revert "chore: comment out silverblue recipe from build matrix"
This reverts commit 54f4ac83b2128d1c857ee3a7c0473fbe4dc22e23.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
       fail-fast: false # stop GH from cancelling all matrix builds if one fails
       matrix:
         recipe:
-          # - recipe-silverblue.yml
+          - recipe-silverblue.yml
           # - recipe-kinoite.yml
           # - recipe-cosmic.yml
           - recipe-hyprland.yml
