--- a/recipes/common/final-modules.yml
+++ b/recipes/common/final-modules.yml
@@ -1,4 +1,4 @@
 # yaml-language-server: $schema=https://schema.blue-build.org/module-v1.json
 type: script
 scripts:
-  - regenerateinitramfs.sh
+  - regenerate_initramfs.sh
