Add kernel signing and module infrastructure
The changes add kernel and module signing capabilities, including scripts and
keys to properly sign the CachyOS kernel and NVIDIA modules. This replaces
the previous akmods-based NVIDIA module building approach.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,10 @@ jobs:
           # - recipe-hyprland.yml
           - recipe-hyprland-cachy.yml
     steps:
-      # the build is fully handled by the reusable github action
+      - name: Retrieve Signing Key
+        shell: bash
+        run: |
+          echo "${{ secrets.KERNEL_PRIVKEY }}" > ./files/scripts/certs/private_key.priv
       - name: Build Custom Image
         uses: blue-build/github-action@v1.8
         with:
