--- a/recipes/hyprland-cachy/packages-kernel.yml
+++ b/recipes/hyprland-cachy/packages-kernel.yml
@@ -6,6 +6,7 @@ install:
   - kernel-cachyos-lto
   - kernel-cachyos-lto-modules
   - kernel-cachyos-lto-devel-matched
+  - kernel-cachyos-lto-nvidia-open
   - akmods
 remove:
   - kernel
