--- a/recipes/recipe-hyprland-cachy.yml
+++ b/recipes/recipe-hyprland-cachy.yml
@@ -2,7 +2,7 @@
 name: celestial-hyprland-cachy
 description: A custom image of Fedora and Hyprland with personal modifications.
 
-base-image: quay.io/fedora-ostree-desktops/sway-atomic
+base-image: ghcr.io/secureblue/sericea-main-hardened
 image-version: 42
 
 modules:
