Remove start-modules file and its dependency

--- a/recipes/recipe-hyprland-cachy.yml
+++ b/recipes/recipe-hyprland-cachy.yml
@@ -6,7 +6,7 @@ base-image: ghcr.io/secureblue/sericea-main-hardened
 image-version: 42
 
 modules:
-  - from-file: common/start-modules.yml
+  - from-file: common/packages.yml
   - from-file: hyprland-cachy/packages-deps.yml
   - from-file: hyprland-cachy/packages-kernel.yml
   - from-file: hyprland-cachy/packages-extra.yml
