--- a/recipes/hyprland-cachy/packages-deps.yml
+++ b/recipes/hyprland-cachy/packages-deps.yml
@@ -1,5 +1,6 @@
 # yaml-language-server: $schema=https://schema.blue-build.org/module-v1.json
-type: rpm-ostree
+type: dnf
 install:
-  - libcap-ng-devel
-  - procps-ng-devel
+  packages:
+    - libcap-ng-devel
+    - procps-ng-devel
