--- a/recipes/common/packages-extra.yml
+++ b/recipes/common/packages-extra.yml
@@ -1,17 +1,20 @@
 # yaml-language-server: $schema=https://schema.blue-build.org/module-v1.json
-type: rpm-ostree
+type: dnf
 repos:
-  - https://copr.fedorainfracloud.org/coprs/atim/ubuntu-fonts/repo/fedora-%OS_VERSION%/atim-ubuntu-fonts-fedora-%OS_VERSION%.repo
-  - https://copr.fedorainfracloud.org/coprs/codifryed/CoolerControl/repo/fedora-%OS_VERSION%/codifryed-CoolerControl-fedora-%OS_VERSION%.repo
-  - https://copr.fedorainfracloud.org/coprs/ublue-os/akmods/repo/fedora-%OS_VERSION%/ublue-os-akmods-fedora-%OS_VERSION%.repo
-  - https://repository.mullvad.net/rpm/stable/mullvad.repo
+  copr:
+    - atim/ubuntu-fonts
+    - codifryed/CoolerControl
+    - ublue-os/akmods
+  files:
+    - https://repository.mullvad.net/rpm/stable/mullvad.repo
 install:
-  - ubuntu-family-fonts
-  - openssh-askpass
-  - file-roller
-  - fastfetch
-  - flatpak-builder
-  - coolercontrol
-  - https://github.com/SpacingBat3/WebCord/releases/download/v4.10.4/webcord-4.10.4-1.x86_64.rpm
-  - gamemode
-  - mullvad-vpn
+  packages:
+    - ubuntu-family-fonts
+    - openssh-askpass
+    - file-roller
+    - fastfetch
+    - flatpak-builder
+    - coolercontrol
+    - https://github.com/SpacingBat3/WebCord/releases/download/v4.10.4/webcord-4.10.4-1.x86_64.rpm
+    - gamemode
+    - mullvad-vpn
