--- a/recipes/silverblue/packages.yml
+++ b/recipes/silverblue/packages.yml
@@ -1,6 +1,7 @@
 # yaml-language-server: $schema=https://schema.blue-build.org/module-v1.json
-type: rpm-ostree
+type: dnf
 install:
-  - gnome-shell-extension-dash-to-dock
-  - gnome-shell-extension-pop-shell
-  - pop-gnome-shell-theme
+  packages:
+    - gnome-shell-extension-dash-to-dock
+    - gnome-shell-extension-pop-shell
+    - pop-gnome-shell-theme
