Add kwin-wayland and sddm-breeze to extra packages

--- a/recipes/hyprland-cachy/packages-extra.yml
+++ b/recipes/hyprland-cachy/packages-extra.yml
@@ -8,6 +8,8 @@ install:
     - cachyos-settings
     - scx-scheds
     - scx-manager
+    - kwin-wayland
+    - sddm-breeze
 remove:
   packages:
     - zram-generator-defaults
