🔧 (packages): update package lists for Hyprland and common recipes
Remove kwin-wayland, sddm-breeze, and layer-shell-qt from hyprland-cachy and
common recipes to avoid unnecessary or conflicting packages. Add kwin-wayland,
sddm-breeze, layer-shell-qt, and sddm to hyprland recipe to ensure proper
Wayland session and display manager support. These changes improve package
management and align the package sets with the intended desktop environment
configurations.

--- a/recipes/hyprland/packages.yml
+++ b/recipes/hyprland/packages.yml
@@ -69,3 +69,8 @@ install:
     - nodejs
     - gtksourceview3
     - libsoup3
+
+    - kwin-wayland
+    - sddm-breeze
+    - layer-shell-qt
+    - sddm
