--- a/recipes/recipe-hyprland.yml
+++ b/recipes/recipe-hyprland.yml
@@ -10,6 +10,7 @@ modules:
   - from-file: common/packages-extra.yml
   - from-file: common/fonts.yml
   - from-file: common/packages-nvidia.yml
+  - from-file: common/install-nct6687d.yml
   - from-file: common/files.yml
   - from-file: common/chezmoi.yml
   - from-file: common/final-modules.yml
