--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch: # allow manually triggering builds
 jobs:
   bluebuild:
-    runs-on: runs-on=${{ github.run_id }}/runner=8cpu-linux-x64/image=ubuntu24-full-x64/spot=true
+    runs-on: runs-on=${{ github.run_id }}/runner=8cpu-linux-x64/image=ubuntu-official-x64/spot=true
     name: Build Custom Image
     permissions:
       contents: read
@@ -28,6 +28,10 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - name: Set up Docker, Podman and Buildah
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker.io podman buildah
       - name: Retrieve Signing Key
         shell: bash
         run: |
