--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y docker.io podman buildah
+      - uses: docker/setup-buildx-action@v2
       - name: Retrieve Signing Key
         shell: bash
         run: |
@@ -43,6 +44,6 @@ jobs:
           cosign_private_key: ${{ secrets.SIGNING_SECRET }}
           registry_token: ${{ github.token }}
           pr_event_number: ${{ github.event.number }}
-          squash: false
-          build_opts: --build-driver buildah
+          maximize_build_space: true
+          squash: true
           skip_checkout: true
