--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y docker.io podman buildah
+          sudo systemctl enable --now docker
       - uses: docker/setup-buildx-action@v2
       - name: Retrieve Signing Key
         shell: bash
