--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y docker.io podman buildah
           sudo systemctl enable --now docker
+          sudo usermod -aG docker $USER
       - uses: docker/setup-buildx-action@v2
       - name: Retrieve Signing Key
         shell: bash
