--- a/.github/runs-on.yml
+++ b/.github/runs-on.yml
@@ -1,6 +1,6 @@
 images:
-  ubuntu-official-x64:
+  ubuntu-custom-x64:
     platform: "linux"
     arch: "x64"
-    owner: "099720109477" # Official Ubuntu owner
-    name: "ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*" # Official Ubuntu image
+    owner: "270277432547"
+    name: "270277432547-runs-on-*"
