Use specific AMI version for GitHub Actions runner
Replace wildcard AMI name with explicit version for reproducible builds

--- a/.github/runs-on.yml
+++ b/.github/runs-on.yml
@@ -3,4 +3,4 @@ images:
     platform: "linux"
     arch: "x64"
     owner: "270277432547"
-    name: "270277432547-runs-on-*"
+    name: "270277432547-runs-on-2025-06-08-142336"
