--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,11 +10,7 @@ on:
   workflow_dispatch: # allow manually triggering builds
 jobs:
   bluebuild:
-    runs-on:
-      - runs-on=${{ github.run_id }}
-      - cpu=8
-      - image=ubuntu_custom_x64
-      - spot=true
+    runs-on: runs-on=${{ github.run_id }}/runner=8cpu-linux-x64/image=ubuntu_custom_x64/spot=true
     name: Build Custom Image
     permissions:
       contents: read
