--- a/.github/runs-on.yml
+++ b/.github/runs-on.yml
@@ -1,11 +1,10 @@
-images:
-  ubuntu_custom_x64:
-    platform: "linux"
-    arch: "x64"
-    ami: "ami-0d46136b13e1f64f9"
-runners:
-  runner_custom:
-    cpu: 8
-    family: ["t3"]
-    spot: true
-    image: ubuntu_custom_x64
+ubuntu_custom_x64:
+  platform: "linux"
+  arch: "x64"
+  owner: "135269210855"
+  name: "runs-on-v2.2-ubuntu24-full-x64-*"
+  preinstall: |
+    sudo apt-get update
+    sudo apt-get install -y podman buildah docker
+    sudo systemctl enable --now docker
+    sudo usermod -aG docker ubuntu
