--- a/.github/runs-on.yml
+++ b/.github/runs-on.yml
@@ -11,14 +11,7 @@ images:
       # Remove Docker and related packages
       sudo apt-get purge -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
 
-      # from https://askubuntu.com/questions/1414446/whats-the-recommended-way-of-installing-podman-4-in-ubuntu-22-04
-      ubuntu_version='22.04'
-      key_url="https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/unstable/xUbuntu_${ubuntu_version}/Release.key"
-      sources_url="https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/unstable/xUbuntu_${ubuntu_version}"
-      echo "deb $sources_url/ /" | sudo tee /etc/apt/sources.list.d/devel-kubic-libcontainers-unstable.list
-      curl -fsSL $key_url | gpg --dearmor | sudo tee /etc/apt/trusted.gpg.d/devel_kubic_libcontainers_unstable.gpg > /dev/null
-      sudo apt-get update
-      sudo apt-get install -y podman
+      sudo apt-get install -y podman buildah
 
       sudo apt-get autoremove -y
       sudo apt-get clean
