--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,11 +47,11 @@ jobs:
         env:
           CLI_VERSION_TAG: "v0.9"
         run: |
-          sudo docker create \
+          podman create \
             --name blue-build-installer \
             ghcr.io/blue-build/cli:${{ env.CLI_VERSION_TAG }}-installer
-          sudo docker cp blue-build-installer:/out/bluebuild /usr/bin/bluebuild
-          sudo docker rm blue-build-installer
+          podman cp blue-build-installer:/out/bluebuild /usr/bin/bluebuild
+          podman rm blue-build-installer
           bluebuild --version
 
       # blue-build/cli does the heavy lifting
