--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,11 +47,7 @@ jobs:
         env:
           CLI_VERSION_TAG: "v0.9"
         run: |
-          podman create \
-            --name blue-build-installer \
-            ghcr.io/blue-build/cli:${{ env.CLI_VERSION_TAG }}-installer
-          podman cp blue-build-installer:/out/bluebuild /usr/bin/bluebuild
-          podman rm blue-build-installer
+          podman run --pull always --rm ghcr.io/blue-build/cli:latest-installer | bash
           bluebuild --version
 
       # blue-build/cli does the heavy lifting
