--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -109,4 +109,4 @@ jobs:
           RUST_LOG_STYLE: always
           CLICOLOR_FORCE: "1"
         run: |
-          bluebuild build -v --push --build-driver podman ${RECIPE_PATH}
+          sudo bluebuild build -v --push --build-driver podman ${RECIPE_PATH}
