Switch from Podman to Docker for container operations

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,58 +42,16 @@ jobs:
           install-dir: /usr/bin
           use-sudo: true
 
-      - name: Install Podman
-        shell: bash
-        env:
-          CLI_VERSION_TAG: "v0.9"
-        run: |
-          sudo apt-get update
-          sudo apt-get install make git gcc build-essential pkgconf libtool \
-            libsystemd-dev libprotobuf-c-dev libcap-dev libseccomp-dev \
-            libyajl-dev go-md2man autoconf python3 automake golang libgpgme-dev \
-            man conmon passt uidmap netavark
-
-          git clone https://github.com/containers/podman.git
-          cd podman
-          git checkout v5.3.1
-          make
-          sudo make install
-
-          podman -v
-
-          sudo bash -c 'cat > /etc/containers/policy.json << EOF
-          {
-            "default": [
-              {
-                "type": "insecureAcceptAnything"
-              }
-            ]
-          }
-          EOF'
-
-      - name: Install Buildah
-        shell: bash
-        run: |
-          sudo apt-get install -y bats btrfs-progs git go-md2man golang \
-            libapparmor-dev libglib2.0-dev libgpgme11-dev libseccomp-dev \
-            libselinux1-dev make runc skopeo libbtrfs-dev
-
-          git clone https://github.com/containers/buildah
-          cd buildah
-          make
-          sudo make install
-
-          buildah --version
       - name: Install BlueBuild
         shell: bash
         env:
           CLI_VERSION_TAG: "v0.9"
         run: |
-          sudo podman create \
+          sudo docker create \
             --name blue-build-installer \
             ghcr.io/blue-build/cli:${{ env.CLI_VERSION_TAG }}-installer
-          sudo podman cp blue-build-installer:/out/bluebuild /usr/bin/bluebuild
-          sudo podman rm blue-build-installer
+          sudo docker cp blue-build-installer:/out/bluebuild /usr/bin/bluebuild
+          sudo docker rm blue-build-installer
           bluebuild --version
 
       # blue-build/cli does the heavy lifting
@@ -109,4 +67,4 @@ jobs:
           RUST_LOG_STYLE: always
           CLICOLOR_FORCE: "1"
         run: |
-          sudo bluebuild build -v --push ${RECIPE_PATH}
+          bluebuild build -v --push ${RECIPE_PATH}
