Move podman removal to build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch: # allow manually triggering builds
 jobs:
   bluebuild:
-    runs-on: runs-on=${{ github.run_id }}/runner=8cpu-linux-x64/image=ubuntu_custom_x64/spot=true
+    runs-on: runs-on=${{ github.run_id }}/runner=8cpu-linux-x64/spot=true
     name: Build Custom Image
     permissions:
       contents: read
@@ -47,6 +47,7 @@ jobs:
         env:
           CLI_VERSION_TAG: "v0.9"
         run: |
+          sudo apt-get purge -y podman buildah
           sudo docker create \
             --name blue-build-installer \
             ghcr.io/blue-build/cli:${{ env.CLI_VERSION_TAG }}-installer
