--- a/recipes/common/packages-extra.yml
+++ b/recipes/common/packages-extra.yml
@@ -6,7 +6,7 @@ repos:
     - codifryed/CoolerControl
     - ublue-os/akmods
   files:
-    - https://repository.mullvad.net/rpm/stable/mullvad.repo
+    - charm.repo
 install:
   packages:
     - ubuntu-family-fonts
@@ -15,3 +15,4 @@ install:
     - fastfetch
     - https://github.com/SpacingBat3/WebCord/releases/download/v4.10.4/webcord-4.10.4-1.x86_64.rpm
     - gamemode
+    - glow
