--- a/recipes/recipe-hyprland-cachy.yml
+++ b/recipes/recipe-hyprland-cachy.yml
@@ -9,6 +9,7 @@ modules:
   - from-file: hyprland-cachy/packages-deps.yml
   - from-file: hyprland-cachy/packages-kernel.yml
   - from-file: hyprland-cachy/packages-extra.yml
+  - from-file: hyprland/hyprland-scripts.yml
   - from-file: hyprland-cachy/nvidia.yml
   - from-file: hyprland/packages.yml
   - from-file: common/packages-extra.yml
