feat(hyprland): add gtk4-layer-shell to repos and install list
Add celestelove/gtk4-layer-shell to the list of repositories and
gtk4-layer-shell to the install section to enable support for GTK4
layer shell features in the Hyprland environment. This allows for
improved compatibility with applications requiring GTK4 layer shell
functionality.

--- a/recipes/hyprland/packages.yml
+++ b/recipes/hyprland/packages.yml
@@ -5,6 +5,7 @@ repos:
     - solopasha/hyprland
     - wezfurlong/wezterm-nightly
     - atim/starship
+    - celestelove/gtk4-layer-shell
 remove:
   packages:
     - dunst
@@ -74,3 +75,5 @@ install:
     - sddm-breeze
     - layer-shell-qt
     - sddm
+
+    - gtk4-layer-shell
