--- a/recipes/common/packages-extra.yml
+++ b/recipes/common/packages-extra.yml
@@ -17,4 +17,4 @@ install:
     - https://github.com/SpacingBat3/WebCord/releases/download/v4.10.4/webcord-4.10.4-1.x86_64.rpm
     - gamemode
     - glow
-    - google-chrome
+    - google-chrome-stable
