Add sensor monitoring and VPN packages
The additions include temperature monitoring tools (lm_sensors, liquidctl,
coolercontrol) and the Mullvad VPN client, along with their required repos
and configuration.

--- a/recipes/common/packages-extra.yml
+++ b/recipes/common/packages-extra.yml
@@ -8,6 +8,7 @@ repos:
   files:
     - charm.repo
     - google-chrome.repo
+    - https://repository.mullvad.net/rpm/stable/mullvad.repo
 install:
   packages:
     - ubuntu-family-fonts
@@ -18,5 +19,14 @@ install:
     - gamemode
     - glow
     - google-chrome-stable
+
+    - lm_sensors
+    - liquidctl
+    - coolercontrol
+    - coolercontrold
+    - coolercontrol-liqctld
+    - mullvad
+
 optfix:
   - google
+  - mullvad
