Add OpenRGB and dependencies

--- a/recipes/common/packages-extra.yml
+++ b/recipes/common/packages-extra.yml
@@ -26,6 +26,8 @@ install:
     - coolercontrold
     - coolercontrol-liqctld
     - mullvad
+    - openrgb-udev-rules
+    - openrgb
 
 optfix:
   - google
